updated images for locations

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <div class="col-10 offset-1 col-md-10 offset-md-1">
         <div class="card-deck">
             <div class="card">
-                <img src="/images/science-park.png" class="card-img-top" alt="Science Park">
+                <img src="/images/science_park.jpg" class="card-img-top" alt="Science Park">
                 <div class="card-body">
                     <h3 class="card-title">Amsterdam</h3>
                     <p class="card-text">Op het innovatieve Science Park in Amsterdam, omringt door universiteiten en
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/images/h20.png" class="card-img-top" alt="H20 Esports Centre">
+                <img src="/images/h20.jpg" class="card-img-top" alt="H20 Esports Centre">
                 <div class="card-body">
                     <h3 class="card-title">Purmerend</h3>
                     <p class="card-text">Op de H20 Esports Campus in Purmerend, gedreven door e-sports en creative
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/images/kasteel.png" class="card-img-top" alt="Het Kasteel">
+                <img src="/images/groningen.jpg" class="card-img-top" alt="Het Kasteel">
                 <div class="card-body">
                     <h3 class="card-title">Groningen</h3>
                     <p class="card-text">In het Kasteel in Groningen, waar groei en tech perfect samen komen.</p>
