--- a/events.html
+++ b/events.html
@@ -123,7 +123,7 @@
                             <p>Is jou organisatie opzoek naar het aankomende tech talent? Kom dan speeddaten met onze
                                 talenten tijdens de Bit Academy Talent Day. Hier ontmoet je je
                                 volgende collega!</p>
-                            <a href="https://bitstudents.typeform.com/to/IJzgtn" target="_blank" rel="nofollow"
+                            <a href="https://we-are-bit.typeform.com/to/IJzgtn" target="_blank" rel="nofollow"
                                class="btn events__item-btn"><span>Meld je aan!</span></a>
                         </div>
                     </div>
