Updated opendag pagina

--- a/events.html
+++ b/events.html
@@ -2,6 +2,7 @@
 <html lang="nl">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000563">
@@ -16,7 +17,13 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 
-
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MFZDMWC');</script>
+    <!-- End Google Tag Manager -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157814288-1"></script>
     <script>
@@ -51,7 +58,10 @@
 </head>
 
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFZDMWC"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <header class="header">
     <div class="looking-for-bit">
         <p>Opzoek naar NL Leert door? <br/><img src="images/arrow.svg" alt=""></p>
@@ -114,17 +124,13 @@
                 <div class="row events__list">
                     <div class="col-12 col-md-6">
                         <div class="events__item">
-                            <img src="images/talent-day.jpg" alt="Event image" class="events__item-img">
+                            <img src="images/opendag.jpg" alt="Event image" class="events__item-img">
                             <div class="d-flex align-items-center justify-content-between">
-                                <h2 class="h2--lg">Talent dag</h2>
-                                <div class="tag">Datum nog niet bekend</div>
+                                <h2 class="h2--lg">Online open dag</h2>
                             </div>
-                            <p class="p--lg events__item-info">Science Park 608A | 13:00 - 15:00</p>
-                            <p>Is jou organisatie opzoek naar het aankomende tech talent? Kom dan speeddaten met onze
-                                talenten tijdens de Bit Academy Talent Day. Hier ontmoet je je
-                                volgende collega!</p>
-                            <a href="https://we-are-bit.typeform.com/to/IJzgtn" target="_blank" rel="nofollow"
-                               class="btn events__item-btn"><span>Meld je aan!</span></a>
+                            <p>Wil jij weten hoe het is om te studeren aan de Bit Academy? Woon dan één van onze online open dagen bij. Hier krijg je alle informatie die je nodig hebt en kan je zoveel vragen stellen als je wilt. Wil jij een open dag bij wonen? Schrijf je hieronder in, dan sturen wij jou een mail met verschillende data waaruit je kan kiezen.</p>
+                            <a href="https://we-are-bit.typeform.com/to/AMA3Ectd" target="_blank" rel="nofollow"
+                               class="btn events__item-btn"><span>Schrijf je in!</span></a>
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
