changed typeform  to calendly

--- a/events.html
+++ b/events.html
@@ -124,8 +124,9 @@
                 <div class="row events__list">
                     <div class="col-12 col-md-6">
                         <div class="events__item">
-                            <p>Wil jij weten hoe het is om te studeren aan de Bit Academy? Woon dan één van onze online open dagen bij. Hier krijg je alle informatie die je nodig hebt en kan je zoveel vragen stellen als je wilt. <p>
-                            <p class="pt-5">Wil jij een open dag bij wonen? Schrijf je hieronder in, dan sturen wij jou een mail met verschillende data waaruit je kan kiezen.</p>
+
+                            <p>Wil jij weten hoe het is om te studeren aan de Bit Academy? Woon dan één van onze online open dagen bij. Hier krijg je via een korte presentatie alle informatie die je nodig hebt en kan je zoveel vragen stellen als je wilt.</p>
+                            <p class="pt-5">Selecteer hieronder een dag en een tijdstip die jou het beste schikt. De online open dag vindt plaats via Zoom. Je krijgt na het selecteren automatisch een bevestigingsmail en een agenda uitnodiging.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
@@ -136,8 +137,11 @@
                 </div>
 
                 <div class="row pt-5">
-                    <div class="col-12 border-light border">
-                        <div class="typeform-widget" data-url="https://form.typeform.com/to/AMA3Ectd?typeform-medium=embed-snippet" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+                    <div class="col-12">
+                        <!-- Calendly inline widget begin -->
+                        <div class="calendly-inline-widget" data-url="https://calendly.com/joris-bit-academy/bit-academy-online-informatiebijeenkomst?hide_event_type_details=1&hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
+                        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+                        <!-- Calendly inline widget end -->
                     </div>
                 </div>
             </section>
