Added nrto keurmerk

--- a/contact.html
+++ b/contact.html
@@ -151,6 +151,7 @@
                                 <br><a href="tel:0202470347">020 247 0347</a></p>
                         </div>
                     </div>
+                    <a href="https://www.nrto.nl/" target="_blank"><img src="images/NRTO_keurmerk.png" alt="NRTO Keurmerk" style="width: 120px;"></a>
                 </div>
                 <div class="footer__voorwaarden pt-5">
                     <a href="/assets/Algemene-Voorwaarden-november-2020-1.pdf" target="_blank">Algemene Voorwaarden</a> -
