--- a/index.html
+++ b/index.html
@@ -456,8 +456,10 @@
         <div class="row">
             <div class="col-12 col-md-10 offset-md-1">
                 <div class="footer__inner">
-                    <a href="/" class="footer__logo"><img src="images/logo.svg" alt="Logo"
-                                                          class="footer__logo-img"></a>
+                    <a href="/" class="footer__logo">
+                        <img src="images/logo.svg" alt="Logo"
+                                                          class="footer__logo-img">
+                    </a>
                     <div class="footer__info">
                         <div class="footer__info-group">
                             <h4 class="mb-3">Adres</h4>
@@ -471,8 +473,11 @@
                                 <br><a href="tel:0202470347">020 247 0347</a></p>
                         </div>
                     </div>
+
+                    <a href="https://www.nrto.nl/" target="_blank"><img src="images/NRTO_keurmerk.png" alt="NRTO Keurmerk" style="width: 120px;"></a>
                 </div>
                 <div class="footer__voorwaarden pt-5">
+
                     <a href="/assets/Algemene-Voorwaarden-november-2020-1.pdf" target="_blank">Algemene Voorwaarden</a> -
                     <a href="/assets/NRTO-Gedragscode-consumenten-2013.pdf" target="_blank">NRTO Gedragscode</a>
                 </div>
