--- a/verify.html
+++ b/verify.html
@@ -144,7 +144,7 @@
                 <div class="row">
                     <div class="col-12 pt-2">
                         <p>
-                            Deze certificaat verificatie functie is momenteel nog in aanbouw en komt binnenkort beschikbaar. Komt dus gerust
+                            Deze certificaat verificatie functie is momenteel nog in aanbouw en komt binnenkort beschikbaar. Kom dus gerust
                             over een tijdje terug om te valideren of de code op het certificaat geldig is.
                         </p>
                     </div>
