Fixed button color

--- a/coach-worden.html
+++ b/coach-worden.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-xl-4 col-lg-4 col-md-6 pt-3">
-                        <a class="typeform-share btn px-md-0 p-3" href="https://form.typeform.com/to/jEA7cenb"
+                        <a class="typeform-share btn red px-md-0 p-3" href="https://form.typeform.com/to/jEA7cenb"
                            data-mode="drawer_right"
                            target="_blank"><span class="px-3">Loop een keer mee!</span></a>
                     </div>
@@ -251,7 +251,7 @@
                     </div>
 
                     <div class="col-12 col-md-6">
-                        <a class="typeform-share btn px-md-0 p-3" href="https://form.typeform.com/to/jEA7cenb"
+                        <a class="typeform-share btn red px-md-0 p-3" href="https://form.typeform.com/to/jEA7cenb"
                            data-mode="drawer_right"
                            target="_blank"><span class="px-3">Word onze nieuwe collega!</span></a>
                     </div>
