--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 <body>
 <header class="header">
     <div class="looking-for-bit">
-        <p>Opzoek naar NL Leert door? <br/><img src="images/arrow.svg" alt=""></p>
+        <p>Opzoek naar de Bootcamp? <br/><img src="images/arrow.svg" alt=""></p>
 
         <a class="curl" href="https://nlleertdoor.bit-academy.nl">&nbsp;</a>
     </div>
