--- a/community-coach-worden.html
+++ b/community-coach-worden.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-xl-4 col-lg-4 col-md-6 pt-3">
-                        <a class="typeform-share btn red px-md-0 p-3" href="https://form.typeform.com/to/jEA7cenb"
+                        <a class="typeform-share btn red px-md-0 p-3" href="https://form.typeform.com/to/SvGfH60N"
                            data-mode="drawer_right"
                            target="_blank"><span class="px-3">Loop een keer mee!</span></a>
                     </div>
@@ -241,7 +241,7 @@
                     </div>
 
                     <div class="col-12 col-md-6">
-                        <a class="typeform-share btn red px-md-0 p-3" href="https://form.typeform.com/to/jEA7cenb"
+                        <a class="typeform-share btn red px-md-0 p-3" href="https://form.typeform.com/to/SvGfH60N"
                            data-mode="drawer_right"
                            target="_blank"><span class="px-3">Word onze nieuwe collega!</span></a>
                     </div>
