--- a/contact.html
+++ b/contact.html
@@ -120,8 +120,8 @@
                             <br><a href="mailto:…@bit-academy.nl">info@bit-academy.nl</a>
                             <br>
                             <br>Bit Academy B.V.
-                            <br>Science Park 608A
-                            <br>1098XH Amsterdam</p>
+                            <br>Koningin Wilhelminaplein 1
+                            <br>1062HG, Amsterdam</p>
                         <a href="https://www.google.nl/maps/dir//Science+Park+608,+1098+XH+Amsterdam/@52.3544095,4.9570223,17z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x47c6094ff4f599cd:0x2fcf0fe2869cfe06!2m2!1d4.959211!2d52.3544095!3e0"
                            target="_blank" rel="nofollow" class="btn"><span>Plan je route</span></a>
                     </div>
@@ -142,8 +142,8 @@
                         <div class="footer__info-group">
                             <h4 class="mb-3">Adres</h4>
                             <p>Amsterdam
-                                <br>Science Park 608A
-                                <br>1098XH, Amsterdam</p>
+                                <br>Koningin Wilhelminaplein 1
+                                <br>1062HG, Amsterdam</p>
                         </div>
                         <div class="footer__info-group">
                             <h4 class="mb-3">Contact</h4>
