--- a/community-coach-worden.html
+++ b/community-coach-worden.html
@@ -45,7 +45,7 @@
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
     <meta property="og:title" content="Studenten inspireren?" />
-    <meta property="og:description" content="Lijkt het jou leuk om naast je vaste baan 1 dag per week de programmeurs van de toekomst op te leiden? Niet vóór de klas, maar in de klas." />
+    <meta property="og:description" content="Lijkt het jou leuk om naast je vaste baan 1 dag(deel) of avond per week de programmeurs van de toekomst op te leiden? Niet vóór de klas, maar in de klas." />
     <meta name="image" property="og:image" content="https://www.bit-academy.nl/images/ogcoachworden.png">
 
 </head>
@@ -114,7 +114,7 @@
                 <div class="row">
                     <div class="col-12 pt-2">
                         <p>
-                            Lijkt het jou leuk om naast je vaste baan of studie 1 dag per week de programmeurs van de toekomst online te begeleiden?
+                            Lijkt het jou leuk om naast je vaste baan of studie 1 dag(deel) of avond per week de programmeurs van de toekomst online te begeleiden?
                             Dan is de rol van Community Coach iets voor jou! <br/><br/>
                             Cursisten helpen als ze vastlopen bij exercises, live coding sessies verzorgen en zorgen dat er binnen
                             Slack een leuke sfeer hangt. Klinkt als iets voor jou?
