Updated feedback link

--- a/feedback.html
+++ b/feedback.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://we-are-bit.typeform.com/to/Mq6ZK1z1</title>
-<meta http-equiv="refresh" content="0; URL=https://we-are-bit.typeform.com/to/Mq6ZK1z1">
-<link rel="canonical" href="https://we-are-bit.typeform.com/to/Mq6ZK1z1">
+<title>Redirecting to https://we-are-bit.typeform.com/to/G6WCzqa7</title>
+<meta http-equiv="refresh" content="0; URL=https://we-are-bit.typeform.com/to/G6WCzqa7">
+<link rel="canonical" href="https://we-are-bit.typeform.com/to/G6WCzqa7">
