Removed calendly from verify page

--- a/verify.html
+++ b/verify.html
@@ -276,11 +276,11 @@
 <!-- End Google Tag Manager (noscript) -->
 <!-- End Google Tag Manager (noscript) -->
 
-<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-<button type="button" class="btn btn-primary kennismaking-btn" data-toggle="modal"
-        onclick="Calendly.showPopupWidget('https://calendly.com/joris-bit-academy/bit-academy-online-informatiebijeenkomst');return false;">
-    <span>Plan een kennismaking</span> <i class="fas fa-calendar-alt"></i>
-</button>
+<!--<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>-->
+<!--<button type="button" class="btn btn-primary kennismaking-btn" data-toggle="modal"-->
+<!--        onclick="Calendly.showPopupWidget('https://calendly.com/joris-bit-academy/bit-academy-online-informatiebijeenkomst');return false;">-->
+<!--    <span>Plan een kennismaking</span> <i class="fas fa-calendar-alt"></i>-->
+<!--</button>-->
 
 </body>
 
