--- a/events.html
+++ b/events.html
@@ -262,8 +262,8 @@
                         <div class="footer__info-group">
                             <h4 class="mb-3">Adres</h4>
                             <p>Amsterdam
-                                <br>Science Park 608A
-                                <br>1098XH, Amsterdam</p>
+                                <br>Koningin Wilhelminaplein 1
+                                <br>1062HG, Amsterdam</p>
                         </div>
                         <div class="footer__info-group">
                             <h4 class="mb-3">Contact</h4>
