--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                         <div class="footer__info-group">
                             <h4 class="mb-3">Adres</h4>
                             <p>Amsterdam
-                                <br>Science Park 608A
-                                <br>1098XH, Amsterdam</p>
+                                <br>Koningin Wilhelminaplein 1
+                                <br>1062HG, Amsterdam</p>
                         </div>
                         <div class="footer__info-group">
                             <h4 class="mb-3">Contact</h4>
