added computable award

--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     </div>
 </div>
 
+<a class="winnaar" href="https://www.computable.nl/artikel/nieuws/awards-nieuws/7268106/1853296/dit-zijn-de-winnaars-van-de-computable-awards-2021.html" target="_blank">
+        Winnaar
+        <img src="images/computable.png" alt="Computable Awards" style="max-width:300px;">
+</a>
+
 <div class="row row-padding">
     <div class="col-10 offset-1 col-md-10 offset-md-1">
         <div class="card-deck">
