Science Park -> TNW

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <img src="/images/science_park.jpg" class="card-img-top" alt="Science Park">
                 <div class="card-body">
                     <h3 class="card-title">Amsterdam</h3>
-                    <p class="card-text">Op het innovatieve Science Park in Amsterdam, omringt door universiteiten en
+                    <p class="card-text">In de tech-hub van The Next Web in Amsterdam, omringt door bedrijven en
                         start-ups. </p>
                 </div>
                 <div class="card-footer">
