added informatie avond link

--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                         </p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-6 col-12 pt-4">
+                        <a href="https://app.squarespacescheduling.com/schedule.php?owner=24588643&owner=24588643&appointmentType=28623754" target="_blank" class="btn px-md-0 w-100 green">
+                            Bezoek de informatieavond!
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="col-12 col-md-5">
                 <img src="/images/2596842.svg" alt="Programmer with multiple languages">
@@ -468,6 +475,15 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </div>
             <div class="col-12 col-md-3 offset-md-2 col-md-middle pt-5">
                 <img src="images/partners.png" alt="Partners" class="w-100">
+            </div>
+        </div>
+
+
+        <div class="row pt-4">
+            <div class="col-md-6 col-12 pt-4 text-center">
+                <a href="https://app.squarespacescheduling.com/schedule.php?owner=24588643&owner=24588643&appointmentType=28623754" target="_blank" class="btn px-md-0 w-100 green">
+                    Bezoek de informatieavond!
+                </a>
             </div>
         </div>
     </div>
