--- a/manifest.html
+++ b/manifest.html
@@ -186,6 +186,14 @@
                     </div>
                 </div>
             </section>
+
+            <div class="row">
+                <div class="col-md-6 offset-md-3 col-12 pt-5 text-center">
+                    <a href="https://app.squarespacescheduling.com/schedule.php?owner=24588643&owner=24588643&appointmentType=28623754" target="_blank" class="btn px-md-0 w-100 green">
+                        Bezoek de informatieavond!
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </main>
